Energy Saving xApp Deployment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,20 +118,24 @@ build_lib(
     model/oran-lm-noop.cc
     model/oran-lm-lte-2-lte-distance-handover.cc
     model/oran-lm-lte-2-lte-rsrp-handover.cc
+    model/oran-lm-lte-2-lte-energy-saving.cc
     model/oran-cmm.cc
     model/oran-cmm-handover.cc
     model/oran-cmm-noop.cc
     model/oran-cmm-single-command-per-node.cc
     model/oran-command.cc
     model/oran-command-lte-2-lte-handover.cc
+    model/oran-command-lte-2-lte-tx-power.cc
     model/oran-report.cc
     model/oran-report-apploss.cc
     model/oran-report-lte-ue-rsrp-rsrq.cc
+    model/oran-report-lte-energy-efficiency.cc
     model/oran-report-location.cc
     model/oran-report-lte-ue-cell-info.cc
     model/oran-reporter.cc
     model/oran-reporter-apploss.cc
     model/oran-reporter-lte-ue-rsrp-rsrq.cc
+    model/oran-reporter-lte-energy-efficiency.cc
     model/oran-reporter-location.cc
     model/oran-reporter-lte-ue-cell-info.cc
     model/oran-data-repository.cc
@@ -158,20 +162,24 @@ build_lib(
     model/oran-lm-noop.h
     model/oran-lm-lte-2-lte-distance-handover.h
     model/oran-lm-lte-2-lte-rsrp-handover.h
+    model/oran-lm-lte-2-lte-energy-saving.h
     model/oran-cmm.h
     model/oran-cmm-handover.h
     model/oran-cmm-noop.h
     model/oran-cmm-single-command-per-node.h
     model/oran-command.h
     model/oran-command-lte-2-lte-handover.h
+    model/oran-command-lte-2-lte-tx-power.h
     model/oran-report.h
     model/oran-report-apploss.h
     model/oran-report-lte-ue-rsrp-rsrq.h
+    model/oran-report-lte-energy-efficiency.h
     model/oran-report-location.h
     model/oran-report-lte-ue-cell-info.h
     model/oran-reporter.h
     model/oran-reporter-apploss.h
     model/oran-reporter-lte-ue-rsrp-rsrq.h
+    model/oran-reporter-lte-energy-efficiency.h
     model/oran-reporter-location.h
     model/oran-reporter-lte-ue-cell-info.h
     model/oran-data-repository.h
